Bug 1583520 - follow-up: add overflow-wrap to tooltipBody in mouseoverPreviews.js. r=mkmelin
--HG--
extra : rebase_source : ac6fca81f4acb4752b03c4d31cb9b42c909249be

--- a/calendar/base/themes/common/calendar-views.css
+++ b/calendar/base/themes/common/calendar-views.css
@@ -870,6 +870,7 @@ calendar-event-box[gripBars="both"]:not([readonly="true"]):hover .calendar-event
 .tooltipBody {
     font-weight: normal;
     white-space: pre-wrap;
+    overflow-wrap: anywhere;
     margin: 0pt;
 }
 
